--- a/index.html
+++ b/index.html
@@ -54,7 +54,17 @@
   </div>
 
 <script>
+ const nav = document.querySelector('#main');
+    const topOfNav = nav.offsetTop;
 
+    function fixNav() {
+        if (window.scrollY >= topOfNav) {
+            document.body.style.paddingTop = nav.offsetHeight + 'px';
+        } else {
+            document.body.style.paddingTop = 0;
+        }
+    }
+    window.addEventListener('scroll', fixNav);
 </script>
 
 </body>
